[package]
name = "reqr"
version = "0.1.0"
edition = "2021"
description = "A middleman that captures HTTP requests and responses between the client and the target URL."

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
actix-web = "4"
actix-session = { version = "0.7.2", features = ["cookie-session"] }

[dev-dependencies]
assert_cmd = "2.0.5"
predicates = "2.1.1"

